--- a/intro_to_scrapy.ipynb
+++ b/intro_to_scrapy.ipynb
@@ -186,7 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Music Fesitval Scraper\n",
+    "### Music Fesitval Scraper\n",
     "We are going to scrape information on music festivals listed on Music Festival Wizard. Specifically, we want to scrape information on all music festivals in the [United States](https://www.musicfestivalwizard.com/festival-guide/us-festivals/) and [Canada](https://www.musicfestivalwizard.com/festival-guide/canada-festivals/). Take a look at both the US and Canada festival lists and notice that they have a similar structure. \n",
     "\n",
     "We want our spider to crawl through both lists and follow the links to each individual festival listing where we can then scrape out the information we want.  \n",
@@ -240,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Grabbing Links  \n",
+    "### Grabbing Links  \n",
     "This first thing we want our Spider to do is grab the links for the individual festivals so we can go to each of those pages and extract some data. \n",
     "\n",
     "If we inspect the first link we see that address for the webpage we want is embeded in an < a > tag. Inspecting the next link shows a simlar tagging. Notice the < a > tags are inside of < span class = 'festivaltitle' >\n",
@@ -270,14 +270,14 @@
    "source": [
     "    def parse(self, response):\n",
     "        # Extract the links to the individual festival pages\n",
-    "        for href in response.xpath(\n",
-    "                '//span[@class=\"festivaltitle\"]/a/@href'\n",
-    "        ).extract():\n",
-    "            # For each festival link, call 'parse_festival' (defined later)\n",
+    "        festival_links = response.xpath('//span[@class=\"festivaltitle\"]/a/@href').extract()\n",
+    "        festival_names = response.xpath('//span[@class=\"festivaltitle\"]/a/text()').extract()\n",
+    "        \n",
+    "        for i in range(len(festival_links)):\n",
     "            yield scrapy.Request(\n",
-    "                url=href,\n",
-    "                callback=self.parse_festival,\n",
-    "                meta={'url':href}\n",
+    "                url=festival_links[i],\n",
+    "                callback=self.parse_festival, # For each festival link, call 'parse_festival' (defined later)\n",
+    "                meta={'url': festival_links[i], 'name': festival_names[i]}\n",
     "            )"
    ]
   },
@@ -294,7 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Next page\n",
+    "### Next page\n",
     "After we've looped through all the links on the current page, we want to be able to go to the next page and do the same. Let's inspect the arrow to the next page and get the link. Using the Scrapy Shell try to figure out the Xpath to this link."
    ]
   },
@@ -308,20 +308,18 @@
    "source": [
     "    def parse(self, response):\n",
     "        # Extract the links to the individual festival pages\n",
-    "        for href in response.xpath(\n",
-    "                '//span[@class=\"festivaltitle\"]/a/@href'\n",
-    "        ).extract():\n",
-    "            # For each festival link, call 'parse_festival' (which we will define)\n",
+    "        festival_links = response.xpath('//span[@class=\"festivaltitle\"]/a/@href').extract()\n",
+    "        festival_names = response.xpath('//span[@class=\"festivaltitle\"]/a/text()').extract()\n",
+    "        \n",
+    "        for i in range(len(festival_links)):\n",
     "            yield scrapy.Request(\n",
-    "                url=href,\n",
-    "                callback=self.parse_festival,\n",
-    "                meta={'url':href}\n",
+    "                url=festival_links[i],\n",
+    "                callback=self.parse_festival, # For each festival link, call 'parse_festival' (defined later)\n",
+    "                meta={'url': festival_links[i], 'name': festival_names[i]}\n",
     "            )\n",
     "\n",
     "        # Follow pagination links and repeat\n",
-    "        next_url = response.xpath(\n",
-    "            '//a[@class=\"next page-numbers\"]/@href'\n",
-    "        ).extract()\n",
+    "        next_url = response.xpath('//a[@class=\"next page-numbers\"]/@href').extract()\n",
     "\n",
     "\n",
     "        yield scrapy.Request(\n",
@@ -362,30 +360,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "**TIP: XPATH IN BROWSERS**:  \n",
-    "When inspecting the HTML of a website, right click in the html code on the item you want and copy the XPath information.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Festival Name\n",
-    "The XPath for the festival name looks like this:\n",
-    "\n",
-    "//*[@id=\"post-25879\"]/div/header/h1/span\n",
-    "\n",
-    "We want to extract the text between the span tags. In the Scrapy shell, lets try the following:\n",
-    "\n",
-    "```\n",
-    "In [1]: response.xpath('//h1/span/text()').extract()\n",
-    "```\n",
-    "The Output we get is \n",
-    "```\n",
-    "Out [1]: [u'Panorama Music Festival 2017']\n",
-    "```"
+    "### Festival Name\n",
+    "Recall that we already extracted the festival name and url!"
    ]
   },
   {
@@ -397,15 +373,26 @@
    "outputs": [],
    "source": [
     "# Festival Name\n",
-    "name = response.xpath('//h1/span/text()').extract()[0]"
+    "name = response.request.meta['name']\n",
+    "url = response.request.meta['url']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Location\n",
-    "Next lets look at location. The XPath is:\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "**TIP: XPATH IN BROWSERS**:  \n",
+    "When inspecting the HTML of a website, right click in the html code on the item you want and copy the XPath information.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Location\n",
+    "The XPath for the festival location is:\n",
     "//*[@id=\"festival-basics\"]\n",
     "\n",
     "Lets look in the scrapy shell and see what the following returns:\n",
@@ -413,24 +400,25 @@
     "In [2]: response.xpath('//div[@id=\"festival-basics\"]/text()').extract()\n",
     "\n",
     "Out[2]:\n",
-    "[u'\\r\\n',\n",
-    " u'\\r\\n',\n",
-    " u'\\r\\n',\n",
-    " u'New York City, NY',\n",
-    " u'\\r\\n',\n",
-    " u'July 28-July 30, 2017',\n",
-    " u'\\r\\n',\n",
-    " u' ',\n",
-    " u'\\r\\n',\n",
-    " u' No',\n",
-    " u'\\r\\n',\n",
-    " u'\\r\\n\\r\\n',\n",
-    " u'\\r\\n\\r\\n\\r\\n\\r\\n\\r\\n',\n",
-    " u'\\r\\n',\n",
-    " u'\\r\\n\\r\\n',\n",
-    " u'\\r\\n\\r\\n',\n",
-    " u'\\r\\n\\r\\n\\r\\n',\n",
-    " u'\\r\\n\\r\\n']\n",
+    "['\\r\\n',\n",
+    " '\\r\\n',\n",
+    " '\\r\\n',\n",
+    " 'Okeechobee, FL',\n",
+    " '\\r\\n',\n",
+    " 'March 1-March 4, 2018',\n",
+    " '\\r\\n',\n",
+    " ' ',\n",
+    " '\\r\\n',\n",
+    " ' Yes',\n",
+    " '\\r\\n',\n",
+    " '\\r\\n\\r\\n\\r\\n\\r\\n\\r\\n',\n",
+    " \"Okeechobee Music & Arts Festival burst onto the Florida scene in 2016 and immediately become a fan favorite. Taking place in early March, Okeechobee is now the first major music festival of the US festival season and provides a glimpse of touring summertime artists. The festival's home at Sunshine Grove is a treat for campers with lush grassy fields, a sandy beach, and a majestic grove.  \\r\\n\\r\\n\",\n",
+    " '\\r\\n',\n",
+    " '\\r\\n\\r\\n',\n",
+    " '\\r\\n\\r\\n',\n",
+    " '\\r\\n\\r\\n\\r\\n',\n",
+    " '\\r\\n\\r\\n']\n",
+    "\n",
     "```\n",
     "\n",
     "We get a list with the location at index 3 and dates at index 5."
@@ -455,31 +443,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Ticket Price\n",
-    "Try this one on your own- Make sure to use the Scrapy Shell!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Website\n",
+    "### Website\n",
     "Let's look at the xpath for the festival's official website:\n",
     "//*[@id=\"festival-basics\"]/a\n",
     "\n",
-    "Notice that the web address is inside the 'a' tag and is assigned to href. To extract an href link we use:  \n",
-    "```\n",
-    "In [3]: response.xpath('//div[@id=\"festival-basics\"]/a/@href').extract()[0]\n",
-    "\n",
-    "Out[3]: u'http://www.panorama.nyc/'\n",
-    "```"
+    "Use the scrapy shell to get this one!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Logo and Lineup\n",
+    "### Logo and Lineup\n",
     "Try to do these on your own."
    ]
   },
@@ -487,7 +462,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Let's put it all together in parse_festival :"
+    "### Let's put it all together in parse_festival :"
    ]
   },
   {
@@ -499,9 +474,10 @@
    "outputs": [],
    "source": [
     "def parse_festival(self, response):\n",
+    "        \n",
+    "        name = response.request.meta['name']\n",
+    "        \n",
     "        url = response.request.meta['url']\n",
-    "\n",
-    "        name = response.xpath('//h1/span/text()').extract()[0]\n",
     "\n",
     "        location = (\n",
     "            response.xpath('//div[@id=\"festival-basics\"]/text()').extract()[3])\n",
@@ -509,12 +485,10 @@
     "        dates = (\n",
     "            response.xpath('//div[@id=\"festival-basics\"]/text()').extract()[5])\n",
     "\n",
-    "        tickets = (\n",
-    "            response.xpath('//div[@id=\"festival-basics\"]/text()').extract()[7])\n",
     "\n",
     "        website = (\n",
     "            response.xpath(\n",
-    "                '//div[@id=\"festival-basics\"]/a/@href').extract()[0]\n",
+    "                '//div[@id=\"festival-basics\"]/a/@href').extract_first()\n",
     "        )\n",
     "\n",
     "        logo = (\n",
@@ -534,7 +508,6 @@
     "            'name': name,\n",
     "            'location': location,\n",
     "            'dates': dates,\n",
-    "            'tickets': tickets,\n",
     "            'website': website,\n",
     "            'logo': logo,\n",
     "            'lineup': lineup\n",
@@ -545,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice we added the 'url' variable from meta which we defined earlier in the parse method. Putting it all together our ```festival.py``` script should look like this:"
+    "Putting it all together our ```festival.py``` script should look like this:"
    ]
   },
   {
@@ -575,21 +548,20 @@
     "    ]\n",
     "\n",
     "    def parse(self, response):\n",
-    "\n",
-    "        for href in response.xpath(\n",
-    "            '//span[@class=\"festivaltitle\"]/a/@href'\n",
-    "        ).extract():\n",
-    "\n",
+    "        # Extract the links to the individual festival pages\n",
+    "        festival_links = response.xpath('//span[@class=\"festivaltitle\"]/a/@href').extract()\n",
+    "        festival_names = response.xpath('//span[@class=\"festivaltitle\"]/a/text()').extract()\n",
+    "        \n",
+    "        for i in range(len(festival_links)):\n",
     "            yield scrapy.Request(\n",
-    "                url=href,\n",
-    "                callback=self.parse_festival,\n",
-    "                meta={'url': href}\n",
+    "                url=festival_links[i],\n",
+    "                callback=self.parse_festival, # For each festival link, call 'parse_festival' (defined later)\n",
+    "                meta={'url': festival_links[i], 'name': festival_names[i]}\n",
     "            )\n",
     "\n",
-    "        next_url = response.xpath(\n",
-    "            '//div[@class=\"pagination\"]/ul/li/a[@class=\"next page-numbers\"]\\\n",
-    "            /@href'\n",
-    "        ).extract()[0]\n",
+    "        # Follow pagination links and repeat\n",
+    "        next_url = response.xpath('//a[@class=\"next page-numbers\"]/@href').extract()\n",
+    "\n",
     "\n",
     "        yield scrapy.Request(\n",
     "            url=next_url,\n",
@@ -597,10 +569,10 @@
     "        )\n",
     "\n",
     "    def parse_festival(self, response):\n",
-    "\n",
+    "        \n",
+    "        name = response.request.meta['name']\n",
+    "        \n",
     "        url = response.request.meta['url']\n",
-    "\n",
-    "        name = response.xpath('//h1/span/text()').extract()[0]\n",
     "\n",
     "        location = (\n",
     "            response.xpath('//div[@id=\"festival-basics\"]/text()').extract()[3])\n",
@@ -608,12 +580,10 @@
     "        dates = (\n",
     "            response.xpath('//div[@id=\"festival-basics\"]/text()').extract()[5])\n",
     "\n",
-    "        tickets = (\n",
-    "            response.xpath('//div[@id=\"festival-basics\"]/text()').extract()[7])\n",
     "\n",
     "        website = (\n",
     "            response.xpath(\n",
-    "                '//div[@id=\"festival-basics\"]/a/@href').extract()[0]\n",
+    "                '//div[@id=\"festival-basics\"]/a/@href').extract_first()\n",
     "        )\n",
     "\n",
     "        logo = (\n",
@@ -633,10 +603,10 @@
     "            'name': name,\n",
     "            'location': location,\n",
     "            'dates': dates,\n",
-    "            'tickets': tickets,\n",
     "            'website': website,\n",
     "            'logo': logo,\n",
-    "            'lineup': lineup}\n"
+    "            'lineup': lineup\n",
+    "        }\n"
    ]
   },
   {
@@ -674,7 +644,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Budget\n",
+    "### Budget\n",
     "\n",
     "When we inspect the budget info and copy the XPath, we get:  \n",
     "//*[@id=\"body\"]/table[2]/tbody/td/table[1]/tbody/td[2]/table/tbody/td/center/table/tbody/td[2]/b  \n",
@@ -701,13 +671,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Total Lifetime Grosses\n",
+    "When we inspect the Domestic Gross and copy the XPath, we get:\n",
+    "/html/body/div[1]/div[3]/div[2]/table[2]/tbody/tr/td/table[2]/tbody/tr[2]/td/table/tbody/tr/td[1]/table/tbody/tr/td[1]/div[1]/div[2]/table/tbody/tr[1]/td[2]/b\n",
+    "\n",
+    "Let's try in the Scrapy Shell:\n",
+    "\n",
+    "```\n",
+    "In [1]: response.xpath('//td[@align=\"right\"]/b/text()').extract()\n",
+    "Out[1]: ['$389,813,101', '45.1%', '$863,738,748']\n",
+    "```\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "domestic =  response.xpath('//td[@align=\"right\"]/b/text()').extract()[0]\n",
+    "foreign =  response.xpath('//td[@align=\"right\"]/b/text()').extract()[1]\n",
+    "worldwide =  response.xpath('//td[@align=\"right\"]/b/text()').extract()[2]"
+   ]
   }
  ],
  "metadata": {
@@ -727,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
