--- a/intro_to_scrapy.ipynb
+++ b/intro_to_scrapy.ipynb
@@ -276,7 +276,7 @@
     "        for i in range(len(festival_links)):\n",
     "            yield scrapy.Request(\n",
     "                url=festival_links[i],\n",
-    "                callback=self.parse_festival, # For each festival link, call 'parse_festival' (defined later)\n",
+    "                callback=self.parse_festival, # defined later\n",
     "                meta={'url': festival_links[i], 'name': festival_names[i]}\n",
     "            )"
    ]
@@ -314,7 +314,7 @@
     "        for i in range(len(festival_links)):\n",
     "            yield scrapy.Request(\n",
     "                url=festival_links[i],\n",
-    "                callback=self.parse_festival, # For each festival link, call 'parse_festival' (defined later)\n",
+    "                callback=self.parse_festival, # defined later\n",
     "                meta={'url': festival_links[i], 'name': festival_names[i]}\n",
     "            )\n",
     "\n",
@@ -555,7 +555,7 @@
     "        for i in range(len(festival_links)):\n",
     "            yield scrapy.Request(\n",
     "                url=festival_links[i],\n",
-    "                callback=self.parse_festival, # For each festival link, call 'parse_festival' (defined later)\n",
+    "                callback=self.parse_festival,\n",
     "                meta={'url': festival_links[i], 'name': festival_names[i]}\n",
     "            )\n",
     "\n",
@@ -675,7 +675,7 @@
    "metadata": {},
    "source": [
     "### Total Lifetime Grosses\n",
-    "When we inspect the Domestic Gross and copy the XPath, we get:\n",
+    "When we inspect the Domestic Gross and copy the XPath, we get:  \n",
     "/html/body/div[1]/div[3]/div[2]/table[2]/tbody/tr/td/table[2]/tbody/tr[2]/td/table/tbody/tr/td[1]/table/tbody/tr/td[1]/div[1]/div[2]/table/tbody/tr[1]/td[2]/b\n",
     "\n",
     "Let's try in the Scrapy Shell:\n",
